1998-05-18    <braam@ptar.stelias.com>

	* got rid of /vice/db/hosts.  Names in /vice/db/servers
	must now be equal to those in the VSGDB. This involved minor
	changes in vol/volume.cc
	* changed SIGSTP to SIGUSR and added a routine UtilDetach which
	does setsid  to: updatesrv, updateclnt, auth2. 
	* changed srv to codasrv
	* vice-setup-rvm exits if srv.conf exists

1998-05-14    <braam@carissimi.coda.cs.cmu.edu>

	* increased the stack of advice_daemon in Venus to 0x4000. Stack
	overflow was caused by several char[MAXPATHLEN] on the stack. 
	* increased the stacksize of various things in advice_srv
	* asked advice_srv to exit if Gui falls over
	* Fixed some missing code in advice/conversions.cc
	* Guidir: beginning of better handling of PATHS and 
	GetServerInformation. advice_srv now works .. at CMU for Peter...
	* Makeconf Eliots problem with VPATH/INCLFLAGS. fixed.
	* lwp.c correct initialization of lwp_logfile. 

1998-05-01    <braam@carissimi.coda.cs.cmu.edu>

	* ======== Release 4.6.0 =========
	* lib-src/mlwp: patches added from Odyssey group to aid in
	debugging stack problems.
	* added LWP_SetLog file to set log file and level.
	* coda-src/rpc2, rp2gen: changes from Odyssey: change time 
	measurement units to ms from 10ms; add float type to XDR.
	* included shrink packet bug fix 
	* assert: changed to while (1) { sleep(1); } to preserve more
	stack. 
	* C++/C: we upgraded libal and auth2 and vicedep to "C". All stub
	will now appear with C linkage (rules for C++ stub code were
	removed). 
	* Changed logging in RPC2 to use a log file rather than stdout. 
	* rvm-src/seg/rvm_loadseg.c: initialized the hdr_vmaddr pointer to 
	NULL. 
	* coda-src/venus/vproc.h: use euid instead of fsuid.  This allows
	samba to export /coda to my windows machine and I can save files
	directly into Coda.
	* coda-src/vice/srvproc.cc ViceNewConnection violated RPC2
	semantics by making a long running call to set up a callback