@@ -1,3 +1,10 @@
+1998-05-27    <braam@carissimi.coda.cs.cmu.edu>
+
+	* rvm-src/configure.in/Makeconf: revamped the building process
+	of the threaded rvm/rds libraries to stop using symbolic links.
+	* volutil/vol-setlogparms.cc: VMRES flag was made obsolete, and 
+	"or-ing" the flags changed to assignment.
+
 1998-05-18    <braam@ptar.stelias.com>
 
 	* got rid of /vice/db/hosts.  Names in /vice/db/servers
